--- a/css/css.css
+++ b/css/css.css
@@ -1,87 +1,168 @@
-/*
-Syntax error: Undefined mixin 'transition'.
-        on line 21 of /Applications/MAMP/htdocs/portfolio/sass/_variables.scss, in `transition'
-        from line 21 of /Applications/MAMP/htdocs/portfolio/sass/_variables.scss
-        from line 1 of /Applications/MAMP/htdocs/portfolio/sass/css.scss
+/* line 12, /Applications/MAMP/htdocs/portfolio/sass/_variables.scss */
+h1, h2, h3, h4, h5, h6, li, p {
+  -webkit-font-smoothing: antialiased;
+  -webkit-font-feature-settings: 'liga', 'dlig';
+  -moz-font-feature-settings: 'liga', 'dlig';
+  font-feature-settings: 'liga', 'dlig';
+  text-rendering: optimizeLegibility;
+}
 
-Backtrace:
-/Applications/MAMP/htdocs/portfolio/sass/_variables.scss:21:in `transition'
-/Applications/MAMP/htdocs/portfolio/sass/_variables.scss:21
-/Applications/MAMP/htdocs/portfolio/sass/css.scss:1
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:249:in `visit_mixin'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-org/jruby/RubyArray.java:2336:in `collect'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:107:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:316:in `visit_rule'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:224:in `visit_import'
-org/jruby/RubyArray.java:2336:in `collect'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:224:in `visit_import'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-org/jruby/RubyArray.java:2336:in `collect'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:107:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:126:in `visit_root'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:7:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/root_node.rb:20:in `render'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/engine.rb:315:in `_render'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/engine.rb:262:in `render'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:140:in `compile'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:139:in `compile'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/logger.rb:45:in `red'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:138:in `compile'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:103:in `run'
-org/jruby/RubyArray.java:1603:in `each'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `run'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:147:in `recompile'
-org/jruby/RubyMethod.java:133:in `call'
-org/jruby/RubyProc.java:268:in `call'
-org/jruby/RubyProc.java:228:in `call'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/path.rb:73:in `run_callback'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/path.rb:55:in `callback_action'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/path.rb:35:in `update'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/state/directory.rb:39:in `modified'
-org/jruby/RubyArray.java:1603:in `each'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/state/directory.rb:37:in `modified'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/state/directory.rb:18:in `refresh'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:17:in `run'
-org/jruby/RubyArray.java:1603:in `each'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:17:in `run'
-org/jruby/RubyKernel.java:1419:in `loop'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:15:in `run'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/monitor.rb:26:in `run'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm.rb:70:in `monitor'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:87:in `perform'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Applications/Scout.app/Contents/Resources/bin/compass:12:in `(root)'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Undefined mixin 'transition'.\A         on line 21 of /Applications/MAMP/htdocs/portfolio/sass/_variables.scss, in `transition'\A         from line 21 of /Applications/MAMP/htdocs/portfolio/sass/_variables.scss\A         from line 1 of /Applications/MAMP/htdocs/portfolio/sass/css.scss"; }
+/* line 20, /Applications/MAMP/htdocs/portfolio/sass/_variables.scss */
+a, header {
+  -webkit-transition: all 0.125s ease-in-out;
+  -moz-transition: all 0.125s ease-in-out;
+  transition: all 0.125s ease-in-out;
+}
+
+/* line 24, /Applications/MAMP/htdocs/portfolio/sass/_variables.scss */
+h1, h2, h3, h4, h5, h6, li, p {
+  font-family: "proxima-nova",sans-serif;
+  font-weight: 300;
+  color: #1e1f2b;
+  line-height: 25px;
+}
+
+/* line 6, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+h1, h2 {
+  color: #1e1f2b;
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+/* line 12, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+h2 {
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
+/* line 17, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+h3, h4, h5, h6 {
+  font-size: 1rem;
+}
+
+/* line 21, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+ul {
+  margin-top: 0;
+  padding-left: 1em;
+}
+
+/* line 26, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+li, p {
+  font-size: 1em;
+  margin: 0 0 1.5em 0;
+}
+/* line 30, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+li:last-child, p:last-child {
+  margin: 0;
+}
+
+/* line 35, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+li {
+  margin-bottom: 0;
+}
+
+/* line 39, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+a {
+  color: #08c882;
+  text-decoration: none;
+}
+/* line 44, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+a:hover {
+  text-decoration: underline;
+}
+
+/* line 49, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+.larger {
+  font-size: 1.25em;
+}
+
+/* line 53, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+.smaller {
+  font-size: .9em;
+}
+
+/* line 1, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+/* line 10, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 14, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header {
+  *zoom: 1;
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  background-color: transparent;
+  padding: 0 12.5px;
+  line-height: 50px;
+}
+/* line 18, /Applications/MAMP/htdocs/portfolio/sass/bourbon/addons/_clearfix.scss */
+header:before, header:after {
+  content: " ";
+  display: table;
+}
+/* line 23, /Applications/MAMP/htdocs/portfolio/sass/bourbon/addons/_clearfix.scss */
+header:after {
+  clear: both;
+}
+/* line 23, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header a {
+  color: #f0f0f0;
+}
+/* line 26, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header a:hover {
+  color: #08c882 !important;
+  text-decoration: none;
+}
+/* line 32, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header span {
+  color: rgba(240, 240, 240, 0.6);
+}
+/* line 36, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header.active {
+  background-color: #f0f0f0;
+}
+/* line 39, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header.active a {
+  color: #1e1f2b;
+}
+/* line 43, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header.active span {
+  color: #8a8a95;
+}
+/* line 48, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header #name {
+  float: left;
+}
+/* line 52, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+header nav {
+  float: right;
+}
+
+/* line 57, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+#marquee {
+  background-color: red;
+  height: 350px;
+}
+
+/* line 3, /Applications/MAMP/htdocs/portfolio/sass/_home.scss */
+.home header span {
+  opacity: 0;
+}
+/* line 8, /Applications/MAMP/htdocs/portfolio/sass/_home.scss */
+.home header.active span {
+  opacity: 1;
+}
