--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,4 @@
-/* line 12, /Applications/MAMP/htdocs/portfolio/sass/_variables.scss */
+/* line 12, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p {
   -webkit-font-smoothing: antialiased;
   -webkit-font-feature-settings: 'liga', 'dlig';
@@ -7,14 +7,14 @@ h1, h2, h3, h4, h5, h6, li, p {
   text-rendering: optimizeLegibility;
 }
 
-/* line 20, /Applications/MAMP/htdocs/portfolio/sass/_variables.scss */
-a, header {
+/* line 20, ../sass/_variables.scss */
+a, button, header {
   -webkit-transition: all 0.125s ease-in-out;
   -moz-transition: all 0.125s ease-in-out;
   transition: all 0.125s ease-in-out;
 }
 
-/* line 24, /Applications/MAMP/htdocs/portfolio/sass/_variables.scss */
+/* line 24, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p {
   font-family: "proxima-nova",sans-serif;
   font-weight: 300;
@@ -22,66 +22,92 @@ h1, h2, h3, h4, h5, h6, li, p {
   line-height: 25px;
 }
 
-/* line 6, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 6, ../sass/_type.scss */
 h1, h2 {
   color: #1e1f2b;
   font-size: 3rem;
   font-weight: 500;
 }
 
-/* line 12, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 12, ../sass/_type.scss */
 h2 {
   font-size: 1.25rem;
   font-weight: 300;
 }
 
-/* line 17, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 17, ../sass/_type.scss */
 h3, h4, h5, h6 {
   font-size: 1rem;
 }
 
-/* line 21, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 21, ../sass/_type.scss */
 ul {
   margin-top: 0;
   padding-left: 1em;
 }
 
-/* line 26, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 26, ../sass/_type.scss */
 li, p {
   font-size: 1em;
   margin: 0 0 1.5em 0;
 }
-/* line 30, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 30, ../sass/_type.scss */
 li:last-child, p:last-child {
   margin: 0;
 }
 
-/* line 35, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 35, ../sass/_type.scss */
 li {
   margin-bottom: 0;
 }
 
-/* line 39, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 39, ../sass/_type.scss */
 a {
   color: #08c882;
   text-decoration: none;
 }
-/* line 44, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 44, ../sass/_type.scss */
 a:hover {
   text-decoration: underline;
 }
 
-/* line 49, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 49, ../sass/_type.scss */
 .larger {
   font-size: 1.25em;
 }
 
-/* line 53, /Applications/MAMP/htdocs/portfolio/sass/_type.scss */
+/* line 53, ../sass/_type.scss */
 .smaller {
   font-size: .9em;
 }
 
-/* line 1, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 1, ../sass/_forms.scss */
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  background-color: #08c882;
+  border: 3px solid transparent;
+  font-size: 1rem;
+  height: 50px;
+  width: 150px;
+  color: #f0f0f0;
+  cursor: pointer;
+}
+/* line 12, ../sass/_forms.scss */
+button:hover, button.reversed {
+  background-color: transparent;
+  border: 3px solid #f0f0f0;
+}
+/* line 18, ../sass/_forms.scss */
+button.reversed:hover {
+  background-color: #08c882;
+  border: 3px solid transparent;
+}
+
+/* line 1, ../sass/_core.scss */
 html, body {
   width: 100%;
   height: 100%;
@@ -92,77 +118,83 @@ html, body {
   line-height: 25px;
 }
 
-/* line 10, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 10, ../sass/_core.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 14, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 14, ../sass/_core.scss */
 header {
   *zoom: 1;
   width: 100%;
   height: 50px;
   position: fixed;
+  background-image: -webkit-linear-gradient( rgba(67, 51, 45, 0.5) 0, transparent 100%);
+  background-image: linear-gradient( rgba(67, 51, 45, 0.5) 0, transparent 100%);
   background-color: transparent;
   padding: 0 12.5px;
   line-height: 50px;
 }
-/* line 18, /Applications/MAMP/htdocs/portfolio/sass/bourbon/addons/_clearfix.scss */
+/* line 18, ../sass/bourbon/addons/_clearfix.scss */
 header:before, header:after {
   content: " ";
   display: table;
 }
-/* line 23, /Applications/MAMP/htdocs/portfolio/sass/bourbon/addons/_clearfix.scss */
+/* line 23, ../sass/bourbon/addons/_clearfix.scss */
 header:after {
   clear: both;
 }
-/* line 23, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 24, ../sass/_core.scss */
 header a {
   color: #f0f0f0;
 }
-/* line 26, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 27, ../sass/_core.scss */
 header a:hover {
   color: #08c882 !important;
   text-decoration: none;
 }
-/* line 32, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 33, ../sass/_core.scss */
 header span {
   color: rgba(240, 240, 240, 0.6);
 }
-/* line 36, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 37, ../sass/_core.scss */
 header.active {
+  background-image: none;
   background-color: #f0f0f0;
 }
-/* line 39, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 41, ../sass/_core.scss */
 header.active a {
   color: #1e1f2b;
 }
-/* line 43, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 45, ../sass/_core.scss */
 header.active span {
   color: #8a8a95;
 }
-/* line 48, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 50, ../sass/_core.scss */
 header #name {
   float: left;
 }
-/* line 52, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 54, ../sass/_core.scss */
 header nav {
   float: right;
 }
 
-/* line 57, /Applications/MAMP/htdocs/portfolio/sass/_core.scss */
+/* line 59, ../sass/_core.scss */
 #marquee {
-  background-color: red;
+  background-image: url("../images/wood_backdrop.jpg");
+  background-size: cover;
+  background-position: center center;
   height: 350px;
+  line-height: 350px;
 }
 
-/* line 3, /Applications/MAMP/htdocs/portfolio/sass/_home.scss */
+/* line 3, ../sass/_home.scss */
 .home header span {
   opacity: 0;
 }
-/* line 8, /Applications/MAMP/htdocs/portfolio/sass/_home.scss */
+/* line 8, ../sass/_home.scss */
 .home header.active span {
   opacity: 1;
 }
