--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -4,9 +4,9 @@ button, .fake_button {
 	@include size($header_height*3 $header_height);
 	display: block;
 	background-color: $accent_color;
-	border: 3px solid transparent;
+	border: $border_width solid transparent;
 	font-size: $font_size;
-	line-height: $header_height - 3px; //compensate for border
+	line-height: $header_height - $border_width; //compensate for border
 	color: $light_color;
 	text-align: center;
 	cursor: pointer;
