--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,5 @@
 /* line 13, ../sass/_variables.scss */
-h1, h2, h3, h4, h5, h6, li, p {
+h1, h2, h3, h4, h5, h6, li, p, html, body {
   -webkit-font-smoothing: antialiased;
   -webkit-font-feature-settings: 'liga', 'dlig';
   -moz-font-feature-settings: 'liga', 'dlig';
@@ -16,67 +16,73 @@ a, button, .fake_button, header {
 
 /* line 25, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p, html, body {
-  font-family: "proxima-nova",sans-serif;
+  font-family: "museo-sans-rounded",sans-serif;
   font-weight: 300;
-  color: #1e1f2b;
+  color: #31364a;
   line-height: 25px;
 }
 
 /* line 6, ../sass/_type.scss */
 h1, h2 {
-  color: #1e1f2b;
+  color: #31364a;
   font-size: 48px;
   font-weight: 500;
 }
 
 /* line 12, ../sass/_type.scss */
+h1 {
+  font-family: "din-condensed-web",sans-serif;
+  text-transform: uppercase;
+}
+
+/* line 17, ../sass/_type.scss */
 h2 {
   font-size: 20px;
   font-weight: 300;
 }
 
-/* line 17, ../sass/_type.scss */
+/* line 22, ../sass/_type.scss */
 h3, h4, h5, h6 {
   font-size: 1em;
 }
 
-/* line 21, ../sass/_type.scss */
+/* line 26, ../sass/_type.scss */
 ul {
   margin-top: 0;
   padding-left: 1em;
 }
 
-/* line 26, ../sass/_type.scss */
+/* line 31, ../sass/_type.scss */
 li, p {
   font-size: 1em;
   margin: 0 0 1.5em 0;
 }
-/* line 30, ../sass/_type.scss */
+/* line 35, ../sass/_type.scss */
 li:last-child, p:last-child {
   margin: 0;
 }
 
-/* line 35, ../sass/_type.scss */
+/* line 40, ../sass/_type.scss */
 li {
   margin-bottom: 0;
 }
 
-/* line 39, ../sass/_type.scss */
+/* line 44, ../sass/_type.scss */
 a {
   color: #08c882;
   text-decoration: none;
 }
-/* line 44, ../sass/_type.scss */
+/* line 49, ../sass/_type.scss */
 a:hover {
   text-decoration: underline;
 }
 
-/* line 49, ../sass/_type.scss */
+/* line 54, ../sass/_type.scss */
 .larger {
   font-size: 1.25em;
 }
 
-/* line 53, ../sass/_type.scss */
+/* line 58, ../sass/_type.scss */
 .smaller {
   font-size: .9em;
 }
@@ -164,7 +170,7 @@ header.active {
 }
 /* line 42, ../sass/_core.scss */
 header.active a {
-  color: #1e1f2b;
+  color: #31364a;
 }
 /* line 46, ../sass/_core.scss */
 header.active span {
@@ -212,6 +218,12 @@ header nav {
 #marquee .fake_button:hover {
   background-color: #08c882;
   border-color: transparent;
+}
+
+/* line 94, ../sass/_core.scss */
+#content {
+  width: 100%;
+  margin: 25px 12.5px;
 }
 
 /* line 3, ../sass/_home.scss */
