--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,6 @@
 $light_color: #f0f0f0;
 $ghosted_color: #8a8a95;
-$dark_color: #1e1f2b;
+$dark_color: #31364a;
 $accent_color: #08c882;
 
 $ratio: 1.6;
@@ -23,7 +23,8 @@ $border_width: 2px;
 }
 
 %font {
-	font-family: "proxima-nova",sans-serif;
+	@extend %smooth;
+	font-family: "museo-sans-rounded",sans-serif;
 	font-weight: 300;
 	color: $dark_color;
 	line-height: $line_height;
