--- a/css/css.css
+++ b/css/css.css
@@ -135,6 +135,7 @@ header {
   width: 100%;
   height: 50px;
   position: fixed;
+  z-index: 999;
   background-image: -webkit-linear-gradient( rgba(67, 51, 45, 0.5) 0, transparent 100%);
   background-image: linear-gradient( rgba(67, 51, 45, 0.5) 0, transparent 100%);
   background-color: transparent;
@@ -187,11 +188,12 @@ header nav {
 
 /* line 60, ../sass/_core.scss */
 #marquee {
+  width: 100%;
+  height: 350px;
   text-align: center;
   background-image: url("../images/wood_backdrop.jpg");
   background-size: cover;
   background-position: center center;
-  height: 350px;
   font-size: 0;
 }
 /* line 68, ../sass/_core.scss */
@@ -202,28 +204,39 @@ header nav {
   vertical-align: middle;
 }
 /* line 75, ../sass/_core.scss */
+#marquee.fixed {
+  position: fixed;
+}
+/* line 78, ../sass/_core.scss */
+#marquee.fixed + #content {
+  position: absolute;
+  top: 350px;
+  z-index: 2;
+}
+/* line 83, ../sass/_core.scss */
 #marquee .centered {
   width: 100%;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 81, ../sass/_core.scss */
+/* line 89, ../sass/_core.scss */
 #marquee .fake_button {
   display: inline-block;
   background-color: transparent;
   border-color: #f0f0f0;
   margin: 0 25px;
 }
-/* line 87, ../sass/_core.scss */
+/* line 95, ../sass/_core.scss */
 #marquee .fake_button:hover {
   background-color: #08c882;
   border-color: transparent;
 }
 
-/* line 94, ../sass/_core.scss */
+/* line 102, ../sass/_core.scss */
 #content {
+  background-color: #f0f0f0;
   width: 100%;
-  margin: 25px 12.5px;
+  padding: 25px 12.5px;
 }
 
 /* line 3, ../sass/_home.scss */
