--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -16,7 +16,7 @@ header {
 	@extend %animated;
 	@include clearfix();
 	@include size(100% $header_height);
-	@include position(fixed, 0 0 0 0);
+	@include position(fixed, 0 0 0 0, 999);
 	@include background-image(linear-gradient(rgba(#43332d, .5) 0, transparent 100%));
 	background-color: transparent;
 	padding: 0 $line_height/2;
@@ -58,11 +58,11 @@ header {
 }
 
 #marquee {
+	@include size(100% $header_height*7);
 	text-align: center;
 	background-image: url("../images/wood_backdrop.jpg");
 	background-size: cover;
 	background-position: center center;
-	height: $header_height*7;
 	font-size: 0;
 
 	&:before {
@@ -70,6 +70,14 @@ header {
 		display: inline-block;
 		height: 100%;
 		vertical-align: middle; 
+	}
+
+	&.fixed {
+		position: fixed;
+
+		+ #content {
+			@include position(absolute, $header_height*7 0 0 0, 2);
+		}
 	}
 
 	.centered {
@@ -92,6 +100,7 @@ header {
 }
 
 #content {
+	background-color: $light_color;
 	width: 100%;
-	margin: $line_height $line_height/2;
+	padding: $line_height $line_height/2;
 }
