--- a/sass/bourbon/addons/_position.scss
+++ b/sass/bourbon/addons/_position.scss
@@ -1,4 +1,4 @@
-@mixin position ($position: relative, $coordinates: 0 0 0 0) {
+@mixin position ($position: relative, $coordinates: 0 0 0 0, $z:false) {
 
   @if type-of($position) == list {
     $coordinates: $position;
@@ -38,5 +38,9 @@
   }
   @else if not(unitless($left)) {
     left: $left;
+  }
+
+  @if $z != null {
+	  z-index: $z;
   }
 }
