--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,6 @@
 $light_color: #f0f0f0;
 $ghosted_color: #8a8a95;
-$dark_color: #31364a;
+$dark_color: #2d3244;
 $accent_color: #08c882;
 
 $ratio: 1.6;
