--- a/css/css.css
+++ b/css/css.css
@@ -18,13 +18,13 @@ a, button, .fake_button, header {
 h1, h2, h3, h4, h5, h6, li, p, html, body {
   font-family: "museo-sans-rounded",sans-serif;
   font-weight: 300;
-  color: #31364a;
+  color: #2d3244;
   line-height: 25px;
 }
 
 /* line 6, ../sass/_type.scss */
 h1, h2 {
-  color: #31364a;
+  color: #2d3244;
   font-size: 48px;
   font-weight: 500;
 }
@@ -171,7 +171,7 @@ header.active {
 }
 /* line 42, ../sass/_core.scss */
 header.active a {
-  color: #31364a;
+  color: #2d3244;
 }
 /* line 46, ../sass/_core.scss */
 header.active span {
