--- a/css/css.css
+++ b/css/css.css
@@ -59,7 +59,7 @@ li, p {
 }
 /* line 35, ../sass/_type.scss */
 li:last-child, p:last-child {
-  margin: 0;
+  margin-bottom: 0;
 }
 
 /* line 40, ../sass/_type.scss */
@@ -130,6 +130,20 @@ html, body {
 }
 
 /* line 15, ../sass/_core.scss */
+.clear {
+  *zoom: 1;
+}
+/* line 18, ../sass/bourbon/addons/_clearfix.scss */
+.clear:before, .clear:after {
+  content: " ";
+  display: table;
+}
+/* line 23, ../sass/bourbon/addons/_clearfix.scss */
+.clear:after {
+  clear: both;
+}
+
+/* line 19, ../sass/_core.scss */
 header {
   *zoom: 1;
   width: 100%;
@@ -151,42 +165,75 @@ header:before, header:after {
 header:after {
   clear: both;
 }
-/* line 25, ../sass/_core.scss */
+/* line 29, ../sass/_core.scss */
 header a {
   color: #f0f0f0;
 }
-/* line 28, ../sass/_core.scss */
+/* line 32, ../sass/_core.scss */
 header a:hover {
   color: #08c882 !important;
   text-decoration: none;
 }
-/* line 34, ../sass/_core.scss */
+/* line 38, ../sass/_core.scss */
 header span {
   color: rgba(240, 240, 240, 0.6);
 }
-/* line 38, ../sass/_core.scss */
+/* line 42, ../sass/_core.scss */
 header.active {
   background-image: none;
   background-color: #f0f0f0;
 }
-/* line 42, ../sass/_core.scss */
+/* line 46, ../sass/_core.scss */
 header.active a {
   color: #2d3244;
 }
-/* line 46, ../sass/_core.scss */
+/* line 50, ../sass/_core.scss */
 header.active span {
   color: #8a8a95;
 }
-/* line 51, ../sass/_core.scss */
+/* line 55, ../sass/_core.scss */
 header #name {
   float: left;
 }
-/* line 55, ../sass/_core.scss */
-header nav {
-  float: right;
-}
 
 /* line 60, ../sass/_core.scss */
+nav {
+  float: right;
+}
+/* line 63, ../sass/_core.scss */
+nav ul {
+  *zoom: 1;
+  height: 48px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+/* line 18, ../sass/bourbon/addons/_clearfix.scss */
+nav ul:before, nav ul:after {
+  content: " ";
+  display: table;
+}
+/* line 23, ../sass/bourbon/addons/_clearfix.scss */
+nav ul:after {
+  clear: both;
+}
+/* line 71, ../sass/_core.scss */
+nav li {
+  float: left;
+  line-height: 50px;
+  border-bottom: 0 solid transparent;
+}
+/* line 76, ../sass/_core.scss */
+nav li:hover {
+  border-bottom: 2px solid #08c882;
+}
+/* line 81, ../sass/_core.scss */
+nav a {
+  display: block;
+  padding: 0 12.5px;
+}
+
+/* line 87, ../sass/_core.scss */
 #marquee {
   width: 100%;
   height: 350px;
@@ -196,43 +243,43 @@ header nav {
   background-position: center center;
   font-size: 0;
 }
-/* line 68, ../sass/_core.scss */
+/* line 95, ../sass/_core.scss */
 #marquee:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 75, ../sass/_core.scss */
+/* line 102, ../sass/_core.scss */
 #marquee.fixed {
   position: fixed;
 }
-/* line 78, ../sass/_core.scss */
+/* line 105, ../sass/_core.scss */
 #marquee.fixed + #content {
   position: absolute;
   top: 350px;
   z-index: 2;
 }
-/* line 83, ../sass/_core.scss */
+/* line 110, ../sass/_core.scss */
 #marquee .centered {
   width: 100%;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 89, ../sass/_core.scss */
+/* line 116, ../sass/_core.scss */
 #marquee .fake_button {
   display: inline-block;
   background-color: transparent;
   border-color: #f0f0f0;
   margin: 0 25px;
 }
-/* line 95, ../sass/_core.scss */
+/* line 122, ../sass/_core.scss */
 #marquee .fake_button:hover {
   background-color: #08c882;
   border-color: transparent;
 }
 
-/* line 102, ../sass/_core.scss */
+/* line 129, ../sass/_core.scss */
 #content {
   background-color: #f0f0f0;
   width: 100%;
