--- a/sass/css.scss
+++ b/sass/css.scss
@@ -1,6 +1,7 @@
 @import 'bourbon/bourbon';
 
 @import "_variables.scss";
+@import "_grid.scss";
 @import "_type.scss";
 @import "_forms.scss";
 @import "_core.scss";
