--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,4 @@
-/* line 13, ../sass/_variables.scss */
+/* line 14, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p, html, body {
   -webkit-font-smoothing: antialiased;
   -webkit-font-feature-settings: 'liga', 'dlig';
@@ -7,19 +7,113 @@ h1, h2, h3, h4, h5, h6, li, p, html, body {
   text-rendering: optimizeLegibility;
 }
 
-/* line 21, ../sass/_variables.scss */
+/* line 22, ../sass/_variables.scss */
 a, button, .fake_button, header {
   -webkit-transition: all 0.125s ease-in-out;
   -moz-transition: all 0.125s ease-in-out;
   transition: all 0.125s ease-in-out;
 }
 
-/* line 25, ../sass/_variables.scss */
+/* line 26, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p, html, body {
-  font-family: "museo-sans-rounded",sans-serif;
+  font-family: "museo-sans-rounded", sans-serif;
   font-weight: 500;
   color: #2d3244;
   line-height: 25px;
+}
+
+/* line 1, ../sass/_grid.scss */
+.row {
+  *zoom: 1;
+  position: relative;
+  margin: 0 25px 1.5rem;
+}
+/* line 18, ../sass/bourbon/addons/_clearfix.scss */
+.row:before, .row:after {
+  content: " ";
+  display: table;
+}
+/* line 23, ../sass/bourbon/addons/_clearfix.scss */
+.row:after {
+  clear: both;
+}
+/* line 6, ../sass/_grid.scss */
+.row.full_width {
+  width: auto;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 12, ../sass/_grid.scss */
+.row:last-child {
+  margin-bottom: 0;
+}
+
+/* line 17, ../sass/_grid.scss */
+.split {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+/* line 20, ../sass/_grid.scss */
+.split > * {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  position: relative;
+  width: 0;
+  margin-right: 25px;
+}
+/* line 26, ../sass/_grid.scss */
+.split > *:last-child {
+  margin-right: 0;
+}
+/* line 31, ../sass/_grid.scss */
+.split > .extra_width {
+  -webkit-box-flex: 2;
+  -moz-box-flex: 2;
+  box-flex: 2;
+  -webkit-flex: 2;
+  -moz-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+}
+/* line 35, ../sass/_grid.scss */
+.split > .touching {
+  margin-right: 0;
+}
+
+/* line 40, ../sass/_grid.scss */
+.no_margin {
+  margin-bottom: 0 !important;
+}
+
+/* line 44, ../sass/_grid.scss */
+.quarter_margin {
+  margin-bottom: .375rem !important;
+}
+
+/* line 48, ../sass/_grid.scss */
+.half_margin {
+  margin-bottom: .75rem !important;
+}
+
+/* line 52, ../sass/_grid.scss */
+.extra_margin {
+  margin-top: 2rem !important;
+  margin-bottom: 1.75rem !important;
+}
+
+/* line 57, ../sass/_grid.scss */
+.centered {
+  margin: 0 auto;
 }
 
 /* line 6, ../sass/_type.scss */
@@ -225,7 +319,7 @@ nav li {
 }
 /* line 76, ../sass/_core.scss */
 nav li:hover {
-  border-bottom: 2px solid #08c882;
+  border-bottom: 4px solid #08c882;
 }
 /* line 81, ../sass/_core.scss */
 nav a {
@@ -255,7 +349,7 @@ nav a {
   position: fixed;
 }
 /* line 105, ../sass/_core.scss */
-#marquee.fixed + #content {
+#marquee.fixed + #wrapper {
   position: absolute;
   top: 350px;
   z-index: 2;
@@ -280,10 +374,39 @@ nav a {
 }
 
 /* line 129, ../sass/_core.scss */
-#content {
+#wrapper {
   background-color: #f0f0f0;
   width: 100%;
+}
+
+/* line 134, ../sass/_core.scss */
+#content {
+  position: relative;
+  top: 0px;
+  bottom: 100px;
   padding: 25px 12.5px;
+}
+
+/* line 139, ../sass/_core.scss */
+footer {
+  width: 100%;
+  height: 100px;
+}
+/* line 142, ../sass/_core.scss */
+footer.fixed {
+  position: fixed;
+  bottom: 0px;
+}
+/* line 146, ../sass/_core.scss */
+footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+/* line 153, ../sass/_core.scss */
+footer li {
+  height: 100%;
 }
 
 /* line 3, ../sass/_home.scss */
