--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -74,7 +74,7 @@ nav {
 		border-bottom: 0 solid transparent;
 
 		&:hover {
-			border-bottom: $border_width solid $accent_color;
+			border-bottom: $border_width*2 solid $accent_color;
 		}
 	}
 
@@ -102,7 +102,7 @@ nav {
 	&.fixed {
 		position: fixed;
 
-		+ #content {
+		+ #wrapper {
 			@include position(absolute, $header_height*7 0 0 0, 2);
 		}
 	}
@@ -126,8 +126,31 @@ nav {
 	}
 }
 
-#content {
+#wrapper {
 	background-color: $light_color;
 	width: 100%;
+}
+
+#content {
+	@include position(relative, 0px 0 $footer_height 0);
 	padding: $line_height $line_height/2;
+}
+
+footer {
+	@include size(100% $footer_height);
+
+	&.fixed {
+		@include position(fixed, 0 0 0px 0);
+	}
+
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		height: 100%;
+	}
+
+	li {
+		height: 100%;
+	}
 }
