--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -54,6 +54,7 @@ header {
 
 	#name {
 		float: left;
+		width: 300px;
 	}
 }
 
@@ -118,10 +119,12 @@ nav {
 		background-color: transparent;
 		border-color: $light_color;
 		margin: 0 $header_height/2;
+		text-shadow: 1px 1px 1px rgba($dark_color, .5);
 
 		&:hover {
 			background-color: $accent_color;
 			border-color: transparent;
+			text-shadow: none;
 		}
 	}
 }
@@ -138,6 +141,7 @@ nav {
 
 footer {
 	@include size(100% $footer_height);
+	background-color: lighten($ghosted_color, 15%)	;
 
 	&.fixed {
 		@include position(fixed, 0 0 0px 0);
@@ -151,6 +155,46 @@ footer {
 	}
 
 	li {
+		@extend %animated;
+		@include background-size($footer_height/2);
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-color: transparent;
 		height: 100%;
+	}
+
+	a {
+		display: block;
+		height: 100%;
+		color: #fff;
+		text-decoration: none !important;
+	}
+
+	span {
+		display: none;
+	}
+
+	#git {
+		background-image: url("../images/git.svg");
+
+		&:hover {
+			background-color: #60B044;
+		}
+	}
+
+	#dribbble {
+		background-image: url("../images/dribbble.svg");
+
+		&:hover {
+			background-color: #EA4C89;
+		}
+	}
+
+	#linkedin {
+		background-image: url("../images/linkedin.svg");
+
+		&:hover {
+			background-color: #069;
+		}
 	}
 }
