--- a/css/css.css
+++ b/css/css.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, li, p, html, body {
 }
 
 /* line 22, ../sass/_variables.scss */
-a, button, .fake_button, header, footer li {
+a, button, .fake_button, header, footer li, .home #work_grid li * {
   -webkit-transition: all 0.125s ease-in-out;
   -moz-transition: all 0.125s ease-in-out;
   transition: all 0.125s ease-in-out;
@@ -387,7 +387,7 @@ nav a {
   position: relative;
   top: 0px;
   bottom: 100px;
-  padding: 25px 12.5px;
+  padding: 25px 0;
 }
 
 /* line 142, ../sass/_core.scss */
@@ -457,4 +457,68 @@ footer #linkedin:hover {
 /* line 8, ../sass/_home.scss */
 .home header.active span {
   opacity: 1;
+}
+/* line 14, ../sass/_home.scss */
+.home #work_grid {
+  *zoom: 1;
+  max-width: 100%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+/* line 18, ../sass/bourbon/addons/_clearfix.scss */
+.home #work_grid:before, .home #work_grid:after {
+  content: " ";
+  display: table;
+}
+/* line 23, ../sass/bourbon/addons/_clearfix.scss */
+.home #work_grid:after {
+  clear: both;
+}
+/* line 21, ../sass/_home.scss */
+.home #work_grid li {
+  position: relative;
+  float: left;
+  width: 25%;
+  min-width: 256px;
+  min-height: 256px;
+  background-color: #8a8a95;
+}
+/* line 29, ../sass/_home.scss */
+.home #work_grid li * {
+  width: 100%;
+  height: 100%;
+}
+/* line 34, ../sass/_home.scss */
+.home #work_grid li:nth-child(5n) {
+  clear: left;
+}
+/* line 38, ../sass/_home.scss */
+.home #work_grid li a {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: 2;
+  display: block;
+  color: #fff;
+  text-decoration: none !important;
+}
+/* line 45, ../sass/_home.scss */
+.home #work_grid li img {
+  display: block;
+}
+/* line 50, ../sass/_home.scss */
+.home #work_grid li:hover a {
+  opacity: 1;
+}
+/* line 54, ../sass/_home.scss */
+.home #work_grid li:hover img {
+  -webkit-filter: blur(2px);
+}
+/* line 61, ../sass/_home.scss */
+.home #bahamar a {
+  opacity: 0;
+  background-color: rgba(0, 0, 255, 0.5);
 }
