--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -136,7 +136,7 @@ nav {
 
 #content {
 	@include position(relative, 0px 0 $footer_height 0);
-	padding: $line_height $line_height/2;
+	padding: $line_height 0;
 }
 
 footer {
