--- a/css/css.css
+++ b/css/css.css
@@ -387,7 +387,7 @@ nav a {
   position: relative;
   top: 0px;
   bottom: 100px;
-  padding: 25px 0;
+  padding: 25px 0 125px;
 }
 
 /* line 142, ../sass/_core.scss */
@@ -450,6 +450,14 @@ footer #linkedin:hover {
   background-color: #069;
 }
 
+/* line 1, ../sass/_home.scss */
+.home {
+  /* #1- Large desktop */
+  /* #3- Regular sized laptops */
+  /* #3- Portrait tablet to landscape and desktop */
+  /* #4- Landscape phone to portrait tablet */
+  /* #5- Landscape phones and down */
+}
 /* line 3, ../sass/_home.scss */
 .home header span {
   opacity: 0;
@@ -480,20 +488,14 @@ footer #linkedin:hover {
   position: relative;
   float: left;
   width: 25%;
-  min-width: 256px;
-  min-height: 256px;
   background-color: #8a8a95;
 }
-/* line 29, ../sass/_home.scss */
+/* line 27, ../sass/_home.scss */
 .home #work_grid li * {
   width: 100%;
   height: 100%;
 }
-/* line 34, ../sass/_home.scss */
-.home #work_grid li:nth-child(5n) {
-  clear: left;
-}
-/* line 38, ../sass/_home.scss */
+/* line 32, ../sass/_home.scss */
 .home #work_grid li a {
   position: absolute;
   top: 0px;
@@ -505,20 +507,38 @@ footer #linkedin:hover {
   color: #fff;
   text-decoration: none !important;
 }
-/* line 45, ../sass/_home.scss */
+/* line 39, ../sass/_home.scss */
 .home #work_grid li img {
   display: block;
 }
-/* line 50, ../sass/_home.scss */
+/* line 44, ../sass/_home.scss */
 .home #work_grid li:hover a {
   opacity: 1;
 }
-/* line 54, ../sass/_home.scss */
+/* line 48, ../sass/_home.scss */
 .home #work_grid li:hover img {
   -webkit-filter: blur(2px);
 }
-/* line 61, ../sass/_home.scss */
+/* line 55, ../sass/_home.scss */
 .home #bahamar a {
   opacity: 0;
   background-color: rgba(0, 0, 255, 0.5);
+}
+@media screen and (min-width: 1400px) {
+  /* line 62, ../sass/_home.scss */
+  .home #work_grid li {
+    width: 20%;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 79, ../sass/_home.scss */
+  .home #work_grid li {
+    width: 33%;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 86, ../sass/_home.scss */
+  .home #work_grid li {
+    width: 50%;
+  }
 }
