--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -136,7 +136,7 @@ nav {
 
 #content {
 	@include position(relative, 0px 0 $footer_height 0);
-	padding: $line_height 0;
+	padding: $line_height 0 $footer_height+$line_height;
 }
 
 footer {
@@ -156,7 +156,7 @@ footer {
 
 	li {
 		@extend %animated;
-		@include background-size($footer_height/2);
+		background-size: $footer_height/2;
 		background-repeat: no-repeat;
 		background-position: center center;
 		background-color: transparent;
