--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,4 @@
-/* line 14, ../sass/_variables.scss */
+/* line 20, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p, html, body {
   -webkit-font-smoothing: antialiased;
   -webkit-font-feature-settings: 'liga', 'dlig';
@@ -7,14 +7,14 @@ h1, h2, h3, h4, h5, h6, li, p, html, body {
   text-rendering: optimizeLegibility;
 }
 
-/* line 22, ../sass/_variables.scss */
+/* line 28, ../sass/_variables.scss */
 a, button, .fake_button, header, footer li, .home #work_grid li * {
   -webkit-transition: all 0.125s ease-in-out;
   -moz-transition: all 0.125s ease-in-out;
   transition: all 0.125s ease-in-out;
 }
 
-/* line 26, ../sass/_variables.scss */
+/* line 32, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p, html, body {
   font-family: "museo-sans-rounded", sans-serif;
   font-weight: 500;
@@ -450,14 +450,6 @@ footer #linkedin:hover {
   background-color: #069;
 }
 
-/* line 1, ../sass/_home.scss */
-.home {
-  /* #1- Large desktop */
-  /* #3- Regular sized laptops */
-  /* #3- Portrait tablet to landscape and desktop */
-  /* #4- Landscape phone to portrait tablet */
-  /* #5- Landscape phones and down */
-}
 /* line 3, ../sass/_home.scss */
 .home header span {
   opacity: 0;
@@ -498,47 +490,61 @@ footer #linkedin:hover {
 /* line 32, ../sass/_home.scss */
 .home #work_grid li a {
   position: absolute;
-  top: 0px;
-  right: 0px;
   bottom: 0px;
-  left: 0px;
   z-index: 2;
+  opacity: 0;
   display: block;
   color: #fff;
   text-decoration: none !important;
 }
-/* line 39, ../sass/_home.scss */
+/* line 40, ../sass/_home.scss */
 .home #work_grid li img {
   display: block;
 }
-/* line 44, ../sass/_home.scss */
+/* line 45, ../sass/_home.scss */
 .home #work_grid li:hover a {
   opacity: 1;
 }
-/* line 48, ../sass/_home.scss */
+/* line 49, ../sass/_home.scss */
 .home #work_grid li:hover img {
   -webkit-filter: blur(2px);
 }
-/* line 55, ../sass/_home.scss */
+/* line 56, ../sass/_home.scss */
 .home #bahamar a {
-  opacity: 0;
   background-color: rgba(0, 0, 255, 0.5);
 }
-@media screen and (min-width: 1400px) {
-  /* line 62, ../sass/_home.scss */
+@media screen and (min-width: 1200px) {
+  /* line 61, ../sass/_home.scss */
   .home #work_grid li {
     width: 20%;
   }
 }
-@media screen and (max-width: 767px) {
-  /* line 79, ../sass/_home.scss */
+@media screen and (max-device-width: 1024px) {
+  /* line 67, ../sass/_home.scss */
   .home #work_grid li {
-    width: 33%;
+    width: 25%;
+  }
+  /* line 70, ../sass/_home.scss */
+  .home #work_grid li a {
+    opacity: 1;
+    height: 25px;
   }
 }
-@media screen and (max-width: 480px) {
-  /* line 86, ../sass/_home.scss */
+@media screen and (max-width: 768px) {
+  /* line 78, ../sass/_home.scss */
+  .home #work_grid li {
+    width: 33.3333%;
+  }
+}
+@media screen and (max-width: 568px) {
+  /* line 84, ../sass/_home.scss */
   .home #work_grid li {
     width: 50%;
+  }
+}
+@media screen and (max-width: 360px) {
+  /* line 90, ../sass/_home.scss */
+  .home #work_grid li {
+    width: 100%;
   }
 }
