--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,4 @@
-/* line 20, ../sass/_variables.scss */
+/* line 21, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p, html, body {
   -webkit-font-smoothing: antialiased;
   -webkit-font-feature-settings: 'liga', 'dlig';
@@ -7,14 +7,14 @@ h1, h2, h3, h4, h5, h6, li, p, html, body {
   text-rendering: optimizeLegibility;
 }
 
-/* line 28, ../sass/_variables.scss */
+/* line 29, ../sass/_variables.scss */
 a, button, .fake_button, header, footer li, .home #work_grid li * {
   -webkit-transition: all 0.125s ease-in-out;
   -moz-transition: all 0.125s ease-in-out;
   transition: all 0.125s ease-in-out;
 }
 
-/* line 32, ../sass/_variables.scss */
+/* line 33, ../sass/_variables.scss */
 h1, h2, h3, h4, h5, h6, li, p, html, body {
   font-family: "museo-sans-rounded", sans-serif;
   font-weight: 500;
@@ -131,7 +131,7 @@ h1 {
 
 /* line 17, ../sass/_type.scss */
 h2 {
-  font-size: 20px;
+  font-size: 1.25em;
   font-weight: 300;
 }
 
@@ -481,14 +481,12 @@ footer #linkedin:hover {
   float: left;
   width: 25%;
   background-color: #8a8a95;
-}
-/* line 27, ../sass/_home.scss */
-.home #work_grid li * {
-  width: 100%;
-  height: 100%;
+  text-align: center;
 }
 /* line 32, ../sass/_home.scss */
 .home #work_grid li a {
+  width: 100%;
+  height: 100%;
   position: absolute;
   bottom: 0px;
   z-index: 2;
@@ -498,52 +496,135 @@ footer #linkedin:hover {
   text-decoration: none !important;
 }
 /* line 40, ../sass/_home.scss */
-.home #work_grid li img {
+.home #work_grid li a:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+/* line 48, ../sass/_home.scss */
+.home #work_grid li div {
+  font-family: "din-condensed-web", sans-serif;
+  text-shadow: 0 0 25px #2d3244;
+  font-size: 2em;
+  line-height: 1em;
+  padding: 0 12.5px;
+  width: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+/* line 59, ../sass/_home.scss */
+.home #work_grid li span {
+  position: absolute;
+  top: 0px;
+  z-index: -1;
+  opacity: 0;
+}
+/* line 64, ../sass/_home.scss */
+.home #work_grid li img, .home #work_grid li span {
+  width: 100%;
+  height: 100%;
   display: block;
 }
-/* line 45, ../sass/_home.scss */
-.home #work_grid li:hover a {
+/* line 70, ../sass/_home.scss */
+.home #work_grid li:hover a, .home #work_grid li:hover span {
   opacity: 1;
 }
-/* line 49, ../sass/_home.scss */
+/* line 74, ../sass/_home.scss */
 .home #work_grid li:hover img {
   -webkit-filter: blur(2px);
 }
-/* line 56, ../sass/_home.scss */
-.home #bahamar a {
-  background-color: rgba(0, 0, 255, 0.5);
+/* line 81, ../sass/_home.scss */
+.home #flowers span {
+  background-color: rgba(87, 44, 128, 0.75);
+}
+/* line 85, ../sass/_home.scss */
+.home #fnm span {
+  background-color: rgba(230, 33, 61, 0.75);
+}
+/* line 89, ../sass/_home.scss */
+.home #famous span {
+  background-color: rgba(185, 1, 1, 0.75);
+}
+/* line 93, ../sass/_home.scss */
+.home #bahamar span {
+  background-color: rgba(0, 155, 200, 0.75);
+}
+/* line 97, ../sass/_home.scss */
+.home #florists span {
+  background-color: rgba(3, 167, 132, 0.75);
+}
+/* line 101, ../sass/_home.scss */
+.home #belterra span {
+  background-color: rgba(161, 27, 28, 0.75);
+}
+/* line 105, ../sass/_home.scss */
+.home #bilt span {
+  background-color: rgba(243, 140, 45, 0.75);
+}
+/* line 109, ../sass/_home.scss */
+.home #decklab span {
+  background-color: rgba(50, 55, 64, 0.75);
+}
+/* line 113, ../sass/_home.scss */
+.home #lauberge span {
+  background-color: rgba(179, 101, 49, 0.75);
+}
+/* line 117, ../sass/_home.scss */
+.home #lumiere span {
+  background-color: rgba(5, 69, 111, 0.75);
+}
+/* line 121, ../sass/_home.scss */
+.home #delmar span {
+  background-color: rgba(204, 76, 38, 0.75);
 }
 @media screen and (min-width: 1200px) {
-  /* line 61, ../sass/_home.scss */
+  /* line 126, ../sass/_home.scss */
   .home #work_grid li {
     width: 20%;
   }
 }
 @media screen and (max-device-width: 1024px) {
-  /* line 67, ../sass/_home.scss */
+  /* line 132, ../sass/_home.scss */
   .home #work_grid li {
     width: 25%;
   }
-  /* line 70, ../sass/_home.scss */
+  /* line 135, ../sass/_home.scss */
   .home #work_grid li a {
     opacity: 1;
-    height: 25px;
+  }
+  /* line 139, ../sass/_home.scss */
+  .home #work_grid li div {
+    position: absolute;
+    bottom: 12.5px;
+    font-size: 1.25em;
+    line-height: 1.25em;
+    display: block;
+    text-shadow: 0 1px 1px #2d3244;
+  }
+  /* line 147, ../sass/_home.scss */
+  .home #work_grid li span {
+    top: auto;
+    bottom: 0;
+    height: 50px;
+    background-color: rgba(45, 50, 68, 0.5);
+    opacity: 1;
   }
 }
 @media screen and (max-width: 768px) {
-  /* line 78, ../sass/_home.scss */
+  /* line 158, ../sass/_home.scss */
   .home #work_grid li {
     width: 33.3333%;
   }
 }
 @media screen and (max-width: 568px) {
-  /* line 84, ../sass/_home.scss */
+  /* line 164, ../sass/_home.scss */
   .home #work_grid li {
     width: 50%;
   }
 }
 @media screen and (max-width: 360px) {
-  /* line 90, ../sass/_home.scss */
+  /* line 170, ../sass/_home.scss */
   .home #work_grid li {
     width: 100%;
   }
