--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -82,6 +82,10 @@
 		background-color: rgba(#572C80, .75);
 	}
 
+	#bellmobi span {
+		background-color: rgba(#ef4647, .75);
+	}
+
 	#fnm span {
 		background-color: rgba(#E6213D, .75);
 	}
@@ -171,6 +175,4 @@
 			width: 100%;
 		}
 	}
-
-
 }
