--- a/css/css.css
+++ b/css/css.css
@@ -387,7 +387,7 @@ nav a {
   position: relative;
   top: 0px;
   bottom: 100px;
-  padding: 25px 0 125px;
+  padding: 25px 0;
 }
 
 /* line 142, ../sass/_core.scss */
@@ -450,6 +450,48 @@ footer #linkedin:hover {
   background-color: #069;
 }
 
+@media screen and (max-width: 568px) {
+  /* line 201, ../sass/_core.scss */
+  #name {
+    width: auto !important;
+  }
+  /* line 204, ../sass/_core.scss */
+  #name .smaller {
+    display: none;
+  }
+
+  /* line 209, ../sass/_core.scss */
+  nav {
+    width: 50px;
+    height: 50px;
+  }
+  /* line 212, ../sass/_core.scss */
+  nav ul {
+    position: absolute;
+    top: 50px;
+    right: 0px;
+    left: 0px;
+    z-index: 2;
+    background-color: none;
+    display: none;
+    height: auto;
+  }
+  /* line 219, ../sass/_core.scss */
+  nav li {
+    background: rgba(45, 50, 68, 0.75);
+    border-bottom: 2px solid #f0f0f0 !important;
+    float: none;
+    width: 100%;
+  }
+  /* line 225, ../sass/_core.scss */
+  nav li:last-child {
+    border-bottom: none;
+  }
+  /* line 231, ../sass/_core.scss */
+  nav.open ul {
+    display: block;
+  }
+}
 /* line 3, ../sass/_home.scss */
 .home header span {
   opacity: 0;
@@ -539,61 +581,65 @@ footer #linkedin:hover {
   background-color: rgba(87, 44, 128, 0.75);
 }
 /* line 85, ../sass/_home.scss */
+.home #bellmobi span {
+  background-color: rgba(239, 70, 71, 0.75);
+}
+/* line 89, ../sass/_home.scss */
 .home #fnm span {
   background-color: rgba(230, 33, 61, 0.75);
 }
-/* line 89, ../sass/_home.scss */
+/* line 93, ../sass/_home.scss */
 .home #famous span {
   background-color: rgba(185, 1, 1, 0.75);
 }
-/* line 93, ../sass/_home.scss */
+/* line 97, ../sass/_home.scss */
 .home #bahamar span {
   background-color: rgba(0, 155, 200, 0.75);
 }
-/* line 97, ../sass/_home.scss */
+/* line 101, ../sass/_home.scss */
 .home #florists span {
   background-color: rgba(3, 167, 132, 0.75);
 }
-/* line 101, ../sass/_home.scss */
+/* line 105, ../sass/_home.scss */
 .home #belterra span {
   background-color: rgba(161, 27, 28, 0.75);
 }
-/* line 105, ../sass/_home.scss */
+/* line 109, ../sass/_home.scss */
 .home #bilt span {
   background-color: rgba(243, 140, 45, 0.75);
 }
-/* line 109, ../sass/_home.scss */
+/* line 113, ../sass/_home.scss */
 .home #decklab span {
   background-color: rgba(50, 55, 64, 0.75);
 }
-/* line 113, ../sass/_home.scss */
+/* line 117, ../sass/_home.scss */
 .home #lauberge span {
   background-color: rgba(179, 101, 49, 0.75);
 }
-/* line 117, ../sass/_home.scss */
+/* line 121, ../sass/_home.scss */
 .home #lumiere span {
   background-color: rgba(5, 69, 111, 0.75);
 }
-/* line 121, ../sass/_home.scss */
+/* line 125, ../sass/_home.scss */
 .home #delmar span {
   background-color: rgba(204, 76, 38, 0.75);
 }
 @media screen and (min-width: 1200px) {
-  /* line 126, ../sass/_home.scss */
+  /* line 130, ../sass/_home.scss */
   .home #work_grid li {
     width: 20%;
   }
 }
 @media screen and (max-device-width: 1024px) {
-  /* line 132, ../sass/_home.scss */
+  /* line 136, ../sass/_home.scss */
   .home #work_grid li {
     width: 25%;
   }
-  /* line 135, ../sass/_home.scss */
+  /* line 139, ../sass/_home.scss */
   .home #work_grid li a {
     opacity: 1;
   }
-  /* line 139, ../sass/_home.scss */
+  /* line 143, ../sass/_home.scss */
   .home #work_grid li div {
     position: absolute;
     bottom: 12.5px;
@@ -602,7 +648,7 @@ footer #linkedin:hover {
     display: block;
     text-shadow: 0 1px 1px #2d3244;
   }
-  /* line 147, ../sass/_home.scss */
+  /* line 151, ../sass/_home.scss */
   .home #work_grid li span {
     top: auto;
     bottom: 0;
@@ -612,19 +658,19 @@ footer #linkedin:hover {
   }
 }
 @media screen and (max-width: 768px) {
-  /* line 158, ../sass/_home.scss */
+  /* line 162, ../sass/_home.scss */
   .home #work_grid li {
     width: 33.3333%;
   }
 }
 @media screen and (max-width: 568px) {
-  /* line 164, ../sass/_home.scss */
+  /* line 168, ../sass/_home.scss */
   .home #work_grid li {
     width: 50%;
   }
 }
 @media screen and (max-width: 360px) {
-  /* line 170, ../sass/_home.scss */
+  /* line 174, ../sass/_home.scss */
   .home #work_grid li {
     width: 100%;
   }
