added if mobile check to get_size(). misc cleanup

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -86,6 +86,10 @@
 		background-color: rgba(#ef4647, .75);
 	}
 
+	#giftify span {
+		background-color: rgba(#08c882, .75);
+	}
+
 	#fnm span {
 		background-color: rgba(#E6213D, .75);
 	}
