--- a/css/css.css
+++ b/css/css.css
@@ -585,61 +585,65 @@ footer #linkedin:hover {
   background-color: rgba(239, 70, 71, 0.75);
 }
 /* line 89, ../sass/_home.scss */
+.home #giftify span {
+  background-color: rgba(8, 200, 130, 0.75);
+}
+/* line 93, ../sass/_home.scss */
 .home #fnm span {
   background-color: rgba(230, 33, 61, 0.75);
 }
-/* line 93, ../sass/_home.scss */
+/* line 97, ../sass/_home.scss */
 .home #famous span {
   background-color: rgba(185, 1, 1, 0.75);
 }
-/* line 97, ../sass/_home.scss */
+/* line 101, ../sass/_home.scss */
 .home #bahamar span {
   background-color: rgba(0, 155, 200, 0.75);
 }
-/* line 101, ../sass/_home.scss */
+/* line 105, ../sass/_home.scss */
 .home #florists span {
   background-color: rgba(3, 167, 132, 0.75);
 }
-/* line 105, ../sass/_home.scss */
+/* line 109, ../sass/_home.scss */
 .home #belterra span {
   background-color: rgba(161, 27, 28, 0.75);
 }
-/* line 109, ../sass/_home.scss */
+/* line 113, ../sass/_home.scss */
 .home #bilt span {
   background-color: rgba(243, 140, 45, 0.75);
 }
-/* line 113, ../sass/_home.scss */
+/* line 117, ../sass/_home.scss */
 .home #decklab span {
   background-color: rgba(50, 55, 64, 0.75);
 }
-/* line 117, ../sass/_home.scss */
+/* line 121, ../sass/_home.scss */
 .home #lauberge span {
   background-color: rgba(179, 101, 49, 0.75);
 }
-/* line 121, ../sass/_home.scss */
+/* line 125, ../sass/_home.scss */
 .home #lumiere span {
   background-color: rgba(5, 69, 111, 0.75);
 }
-/* line 125, ../sass/_home.scss */
+/* line 129, ../sass/_home.scss */
 .home #delmar span {
   background-color: rgba(204, 76, 38, 0.75);
 }
 @media screen and (min-width: 1200px) {
-  /* line 130, ../sass/_home.scss */
+  /* line 134, ../sass/_home.scss */
   .home #work_grid li {
     width: 20%;
   }
 }
 @media screen and (max-device-width: 1024px) {
-  /* line 136, ../sass/_home.scss */
+  /* line 140, ../sass/_home.scss */
   .home #work_grid li {
     width: 25%;
   }
-  /* line 139, ../sass/_home.scss */
+  /* line 143, ../sass/_home.scss */
   .home #work_grid li a {
     opacity: 1;
   }
-  /* line 143, ../sass/_home.scss */
+  /* line 147, ../sass/_home.scss */
   .home #work_grid li div {
     position: absolute;
     bottom: 12.5px;
@@ -648,7 +652,7 @@ footer #linkedin:hover {
     display: block;
     text-shadow: 0 1px 1px #2d3244;
   }
-  /* line 151, ../sass/_home.scss */
+  /* line 155, ../sass/_home.scss */
   .home #work_grid li span {
     top: auto;
     bottom: 0;
@@ -658,19 +662,19 @@ footer #linkedin:hover {
   }
 }
 @media screen and (max-width: 768px) {
-  /* line 162, ../sass/_home.scss */
+  /* line 166, ../sass/_home.scss */
   .home #work_grid li {
     width: 33.3333%;
   }
 }
 @media screen and (max-width: 568px) {
-  /* line 168, ../sass/_home.scss */
+  /* line 172, ../sass/_home.scss */
   .home #work_grid li {
     width: 50%;
   }
 }
 @media screen and (max-width: 360px) {
-  /* line 174, ../sass/_home.scss */
+  /* line 178, ../sass/_home.scss */
   .home #work_grid li {
     width: 100%;
   }
