--- a/css/css.css
+++ b/css/css.css
@@ -333,35 +333,34 @@ nav a {
   width: 100%;
   height: 350px;
   text-align: center;
-  background-image: url("../images/wood_backdrop.jpg");
   background-size: cover;
   background-position: center center;
   font-size: 0;
 }
-/* line 96, ../sass/_core.scss */
+/* line 95, ../sass/_core.scss */
 #marquee:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 103, ../sass/_core.scss */
+/* line 102, ../sass/_core.scss */
 #marquee.fixed {
   position: fixed;
 }
-/* line 106, ../sass/_core.scss */
+/* line 105, ../sass/_core.scss */
 #marquee.fixed + #wrapper {
   position: absolute;
   top: 350px;
   z-index: 2;
 }
-/* line 111, ../sass/_core.scss */
+/* line 110, ../sass/_core.scss */
 #marquee .centered {
   width: 100%;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 117, ../sass/_core.scss */
+/* line 116, ../sass/_core.scss */
 #marquee .fake_button {
   display: inline-block;
   background-color: transparent;
@@ -369,20 +368,20 @@ nav a {
   margin: 0 25px;
   text-shadow: 1px 1px 1px rgba(45, 50, 68, 0.5);
 }
-/* line 124, ../sass/_core.scss */
+/* line 123, ../sass/_core.scss */
 #marquee .fake_button:hover {
   background-color: #08c882;
   border-color: transparent;
   text-shadow: none;
 }
 
-/* line 132, ../sass/_core.scss */
+/* line 131, ../sass/_core.scss */
 #wrapper {
   background-color: #f0f0f0;
   width: 100%;
 }
 
-/* line 137, ../sass/_core.scss */
+/* line 136, ../sass/_core.scss */
 #content {
   position: relative;
   top: 0px;
@@ -390,25 +389,25 @@ nav a {
   padding: 25px 0;
 }
 
-/* line 142, ../sass/_core.scss */
+/* line 141, ../sass/_core.scss */
 footer {
   width: 100%;
   height: 100px;
   background-color: #b2b2b9;
 }
-/* line 146, ../sass/_core.scss */
+/* line 145, ../sass/_core.scss */
 footer.fixed {
   position: fixed;
   bottom: 0px;
 }
-/* line 150, ../sass/_core.scss */
+/* line 149, ../sass/_core.scss */
 footer ul {
   list-style: none;
   margin: 0;
   padding: 0;
   height: 100%;
 }
-/* line 157, ../sass/_core.scss */
+/* line 156, ../sass/_core.scss */
 footer li {
   background-size: 50px;
   background-repeat: no-repeat;
@@ -416,56 +415,56 @@ footer li {
   background-color: transparent;
   height: 100%;
 }
-/* line 166, ../sass/_core.scss */
+/* line 165, ../sass/_core.scss */
 footer a {
   display: block;
   height: 100%;
 }
-/* line 171, ../sass/_core.scss */
+/* line 170, ../sass/_core.scss */
 footer span {
   display: none;
 }
-/* line 175, ../sass/_core.scss */
+/* line 174, ../sass/_core.scss */
 footer #git {
   background-image: url("../images/git.svg");
 }
-/* line 178, ../sass/_core.scss */
+/* line 177, ../sass/_core.scss */
 footer #git:hover {
   background-color: #60B044;
 }
-/* line 183, ../sass/_core.scss */
+/* line 182, ../sass/_core.scss */
 footer #dribbble {
   background-image: url("../images/dribbble.svg");
 }
-/* line 186, ../sass/_core.scss */
+/* line 185, ../sass/_core.scss */
 footer #dribbble:hover {
   background-color: #EA4C89;
 }
-/* line 191, ../sass/_core.scss */
+/* line 190, ../sass/_core.scss */
 footer #linkedin {
   background-image: url("../images/linkedin.svg");
 }
-/* line 194, ../sass/_core.scss */
+/* line 193, ../sass/_core.scss */
 footer #linkedin:hover {
   background-color: #069;
 }
 
 @media screen and (max-width: 568px) {
-  /* line 201, ../sass/_core.scss */
+  /* line 200, ../sass/_core.scss */
   #name {
     width: auto !important;
   }
-  /* line 204, ../sass/_core.scss */
+  /* line 203, ../sass/_core.scss */
   #name .smaller {
     display: none;
   }
 
-  /* line 209, ../sass/_core.scss */
+  /* line 208, ../sass/_core.scss */
   nav {
     width: 50px;
     height: 50px;
   }
-  /* line 212, ../sass/_core.scss */
+  /* line 211, ../sass/_core.scss */
   nav ul {
     position: absolute;
     top: 50px;
@@ -476,18 +475,18 @@ footer #linkedin:hover {
     display: none;
     height: auto;
   }
-  /* line 219, ../sass/_core.scss */
+  /* line 218, ../sass/_core.scss */
   nav li {
     background: rgba(45, 50, 68, 0.75);
     border-bottom: 2px solid #f0f0f0 !important;
     float: none;
     width: 100%;
   }
-  /* line 225, ../sass/_core.scss */
+  /* line 224, ../sass/_core.scss */
   nav li:last-child {
     border-bottom: none;
   }
-  /* line 231, ../sass/_core.scss */
+  /* line 230, ../sass/_core.scss */
   nav.open ul {
     display: block;
   }
@@ -501,6 +500,10 @@ footer #linkedin:hover {
   opacity: 1;
 }
 /* line 14, ../sass/_home.scss */
+.home #marquee {
+  background-image: url("../images/wood_backdrop.jpg");
+}
+/* line 18, ../sass/_home.scss */
 .home #work_grid {
   *zoom: 1;
   max-width: 100%;
@@ -517,7 +520,7 @@ footer #linkedin:hover {
 .home #work_grid:after {
   clear: both;
 }
-/* line 21, ../sass/_home.scss */
+/* line 25, ../sass/_home.scss */
 .home #work_grid li {
   position: relative;
   float: left;
@@ -525,7 +528,7 @@ footer #linkedin:hover {
   background-color: #8a8a95;
   text-align: center;
 }
-/* line 32, ../sass/_home.scss */
+/* line 36, ../sass/_home.scss */
 .home #work_grid li a {
   width: 100%;
   height: 100%;
@@ -537,14 +540,14 @@ footer #linkedin:hover {
   color: #fff;
   text-decoration: none !important;
 }
-/* line 40, ../sass/_home.scss */
+/* line 44, ../sass/_home.scss */
 .home #work_grid li a:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 48, ../sass/_home.scss */
+/* line 52, ../sass/_home.scss */
 .home #work_grid li div {
   font-family: "din-condensed-web", sans-serif;
   text-shadow: 0 0 25px #2d3244;
@@ -555,95 +558,95 @@ footer #linkedin:hover {
   display: inline-block;
   vertical-align: middle;
 }
-/* line 59, ../sass/_home.scss */
+/* line 63, ../sass/_home.scss */
 .home #work_grid li span {
   position: absolute;
   top: 0px;
   z-index: -1;
   opacity: 0;
 }
-/* line 64, ../sass/_home.scss */
+/* line 68, ../sass/_home.scss */
 .home #work_grid li img, .home #work_grid li span {
   width: 100%;
   height: 100%;
   display: block;
 }
-/* line 70, ../sass/_home.scss */
+/* line 74, ../sass/_home.scss */
 .home #work_grid li:hover a, .home #work_grid li:hover span {
   opacity: 1;
 }
-/* line 74, ../sass/_home.scss */
+/* line 78, ../sass/_home.scss */
 .home #work_grid li:hover img {
   -webkit-filter: blur(2px);
 }
-/* line 81, ../sass/_home.scss */
+/* line 85, ../sass/_home.scss */
 .home #flowers span {
   background-color: rgba(87, 44, 128, 0.75);
 }
-/* line 85, ../sass/_home.scss */
+/* line 89, ../sass/_home.scss */
 .home #bellmobi span {
   background-color: rgba(239, 70, 71, 0.75);
 }
-/* line 89, ../sass/_home.scss */
+/* line 93, ../sass/_home.scss */
 .home #giftify span {
   background-color: rgba(8, 200, 130, 0.75);
 }
-/* line 93, ../sass/_home.scss */
+/* line 97, ../sass/_home.scss */
 .home #fnm span {
   background-color: rgba(230, 33, 61, 0.75);
 }
-/* line 97, ../sass/_home.scss */
+/* line 101, ../sass/_home.scss */
 .home #famous span {
   background-color: rgba(185, 1, 1, 0.75);
 }
-/* line 101, ../sass/_home.scss */
+/* line 105, ../sass/_home.scss */
 .home #bahamar span {
   background-color: rgba(0, 155, 200, 0.75);
 }
-/* line 105, ../sass/_home.scss */
+/* line 109, ../sass/_home.scss */
 .home #florists span {
   background-color: rgba(3, 167, 132, 0.75);
 }
-/* line 109, ../sass/_home.scss */
+/* line 113, ../sass/_home.scss */
 .home #belterra span {
   background-color: rgba(161, 27, 28, 0.75);
 }
-/* line 113, ../sass/_home.scss */
+/* line 117, ../sass/_home.scss */
 .home #bilt span {
   background-color: rgba(243, 140, 45, 0.75);
 }
-/* line 117, ../sass/_home.scss */
+/* line 121, ../sass/_home.scss */
 .home #decklab span {
   background-color: rgba(50, 55, 64, 0.75);
 }
-/* line 121, ../sass/_home.scss */
+/* line 125, ../sass/_home.scss */
 .home #lauberge span {
   background-color: rgba(179, 101, 49, 0.75);
 }
-/* line 125, ../sass/_home.scss */
+/* line 129, ../sass/_home.scss */
 .home #lumiere span {
   background-color: rgba(5, 69, 111, 0.75);
 }
-/* line 129, ../sass/_home.scss */
+/* line 133, ../sass/_home.scss */
 .home #delmar span {
   background-color: rgba(204, 76, 38, 0.75);
 }
 @media screen and (min-width: 1200px) {
-  /* line 134, ../sass/_home.scss */
+  /* line 138, ../sass/_home.scss */
   .home #work_grid li {
     width: 20%;
   }
 }
 @media screen and (max-device-width: 1024px) {
-  /* line 140, ../sass/_home.scss */
+  /* line 144, ../sass/_home.scss */
   .home #work_grid li {
     width: 25%;
   }
-  /* line 143, ../sass/_home.scss */
+  /* line 147, ../sass/_home.scss */
   .home #work_grid li a {
     opacity: 1;
   }
-  /* line 147, ../sass/_home.scss */
+  /* line 151, ../sass/_home.scss */
   .home #work_grid li div {
     position: absolute;
     bottom: 12.5px;
@@ -652,7 +655,7 @@ footer #linkedin:hover {
     display: block;
     text-shadow: 0 1px 1px #2d3244;
   }
-  /* line 155, ../sass/_home.scss */
+  /* line 159, ../sass/_home.scss */
   .home #work_grid li span {
     top: auto;
     bottom: 0;
@@ -662,19 +665,19 @@ footer #linkedin:hover {
   }
 }
 @media screen and (max-width: 768px) {
-  /* line 166, ../sass/_home.scss */
+  /* line 170, ../sass/_home.scss */
   .home #work_grid li {
     width: 33.3333%;
   }
 }
 @media screen and (max-width: 568px) {
-  /* line 172, ../sass/_home.scss */
+  /* line 176, ../sass/_home.scss */
   .home #work_grid li {
     width: 50%;
   }
 }
 @media screen and (max-width: 360px) {
-  /* line 178, ../sass/_home.scss */
+  /* line 182, ../sass/_home.scss */
   .home #work_grid li {
     width: 100%;
   }
