--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -71,11 +71,11 @@ nav {
 
 	li {
 		float: left;
-		line-height: $header_height;
-		border-bottom: 0 solid transparent;
+		line-height: $header_height - $border_width*4;
+		border-top: $border_width*2 solid transparent;
 
 		&:hover {
-			border-bottom: $border_width*2 solid $accent_color;
+			border-top-color: $accent_color;
 		}
 	}
 
@@ -111,6 +111,10 @@ nav {
 		width: 100%;
 		display: inline-block;
 		vertical-align: middle;
+	}
+
+	h1 {
+		margin-bottom: .25em;
 	}
 
 	.fake_button {
