--- a/css/css.css
+++ b/css/css.css
@@ -186,6 +186,12 @@ a:hover {
   font-size: .9em;
 }
 
+@media screen and (max-width: 568px) {
+  /* line 68, ../sass/_type.scss */
+  h1 {
+    font-size: 3.75rem;
+  }
+}
 /* line 1, ../sass/_forms.scss */
 button, .fake_button {
   -webkit-appearance: none;
@@ -210,8 +216,17 @@ button:hover, .fake_button:hover {
   text-decoration: none;
 }
 
+@media screen and (max-width: 360px) {
+  /* line 21, ../sass/_forms.scss */
+  button, .fake_button {
+    width: 100px;
+  }
+}
 /* line 1, ../sass/_core.scss */
 html, body {
+  -webkit-transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
+  -moz-transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
   width: 100%;
   height: 100%;
   margin: 0;
@@ -221,14 +236,14 @@ html, body {
   line-height: 25px;
 }
 
-/* line 11, ../sass/_core.scss */
+/* line 12, ../sass/_core.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 15, ../sass/_core.scss */
+/* line 16, ../sass/_core.scss */
 .clear {
   *zoom: 1;
 }
@@ -242,7 +257,7 @@ html, body {
   clear: both;
 }
 
-/* line 19, ../sass/_core.scss */
+/* line 20, ../sass/_core.scss */
 header {
   *zoom: 1;
   width: 100%;
@@ -264,43 +279,43 @@ header:before, header:after {
 header:after {
   clear: both;
 }
-/* line 29, ../sass/_core.scss */
+/* line 30, ../sass/_core.scss */
 header a {
   color: #f0f0f0;
 }
-/* line 32, ../sass/_core.scss */
+/* line 33, ../sass/_core.scss */
 header a:hover {
   color: #08c882 !important;
   text-decoration: none;
 }
-/* line 38, ../sass/_core.scss */
+/* line 39, ../sass/_core.scss */
 header span {
   color: rgba(240, 240, 240, 0.6);
 }
-/* line 42, ../sass/_core.scss */
+/* line 43, ../sass/_core.scss */
 header.active {
   background-image: none;
   background-color: #f0f0f0;
 }
-/* line 46, ../sass/_core.scss */
+/* line 47, ../sass/_core.scss */
 header.active a {
   color: #2d3244;
 }
-/* line 50, ../sass/_core.scss */
+/* line 51, ../sass/_core.scss */
 header.active span {
   color: #8a8a95;
 }
-/* line 55, ../sass/_core.scss */
+/* line 56, ../sass/_core.scss */
 header #name {
   float: left;
   width: 300px;
 }
 
-/* line 61, ../sass/_core.scss */
+/* line 62, ../sass/_core.scss */
 nav {
   float: right;
 }
-/* line 64, ../sass/_core.scss */
+/* line 65, ../sass/_core.scss */
 nav ul {
   *zoom: 1;
   height: 48px;
@@ -317,23 +332,32 @@ nav ul:before, nav ul:after {
 nav ul:after {
   clear: both;
 }
-/* line 72, ../sass/_core.scss */
+/* line 73, ../sass/_core.scss */
 nav li {
+  position: relative;
   float: left;
-  line-height: 42px;
-  border-top: 4px solid transparent;
+  line-height: 50px;
 }
-/* line 77, ../sass/_core.scss */
-nav li:hover {
-  border-top-color: #08c882;
+/* line 78, ../sass/_core.scss */
+nav li div {
+  position: absolute;
+  top: 0px;
+  z-index: 2;
+  width: 100%;
+  height: 4px;
+  background-color: transparent;
 }
-/* line 82, ../sass/_core.scss */
+/* line 85, ../sass/_core.scss */
+nav li:hover div {
+  background-color: #08c882;
+}
+/* line 91, ../sass/_core.scss */
 nav a {
   display: block;
   padding: 0 12.5px;
 }
 
-/* line 88, ../sass/_core.scss */
+/* line 97, ../sass/_core.scss */
 #marquee {
   width: 100%;
   height: 350px;
@@ -342,34 +366,34 @@ nav a {
   background-position: center center;
   font-size: 0;
 }
-/* line 95, ../sass/_core.scss */
+/* line 104, ../sass/_core.scss */
 #marquee:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 102, ../sass/_core.scss */
+/* line 111, ../sass/_core.scss */
 #marquee.fixed {
   position: fixed;
 }
-/* line 105, ../sass/_core.scss */
+/* line 114, ../sass/_core.scss */
 #marquee.fixed + #wrapper {
   position: absolute;
   top: 350px;
   z-index: 2;
 }
-/* line 110, ../sass/_core.scss */
+/* line 119, ../sass/_core.scss */
 #marquee .centered {
   width: 100%;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 116, ../sass/_core.scss */
+/* line 125, ../sass/_core.scss */
 #marquee h1 {
   margin-bottom: .25em;
 }
-/* line 120, ../sass/_core.scss */
+/* line 129, ../sass/_core.scss */
 #marquee .fake_button {
   display: inline-block;
   background-color: transparent;
@@ -377,20 +401,20 @@ nav a {
   margin: 0 25px;
   text-shadow: 1px 1px 1px rgba(45, 50, 68, 0.5);
 }
-/* line 127, ../sass/_core.scss */
+/* line 136, ../sass/_core.scss */
 #marquee .fake_button:hover {
   background-color: #08c882;
   border-color: transparent;
   text-shadow: none;
 }
 
-/* line 135, ../sass/_core.scss */
+/* line 144, ../sass/_core.scss */
 #wrapper {
   background-color: #f0f0f0;
   width: 100%;
 }
 
-/* line 140, ../sass/_core.scss */
+/* line 149, ../sass/_core.scss */
 #content {
   position: relative;
   top: 0px;
@@ -398,25 +422,25 @@ nav a {
   padding: 25px 0;
 }
 
-/* line 145, ../sass/_core.scss */
+/* line 154, ../sass/_core.scss */
 footer {
   width: 100%;
   height: 100px;
   background-color: #b2b2b9;
 }
-/* line 149, ../sass/_core.scss */
+/* line 158, ../sass/_core.scss */
 footer.fixed {
   position: fixed;
   bottom: 0px;
 }
-/* line 153, ../sass/_core.scss */
+/* line 162, ../sass/_core.scss */
 footer ul {
   list-style: none;
   margin: 0;
   padding: 0;
   height: 100%;
 }
-/* line 160, ../sass/_core.scss */
+/* line 169, ../sass/_core.scss */
 footer li {
   background-size: 50px;
   background-repeat: no-repeat;
@@ -424,80 +448,124 @@ footer li {
   background-color: transparent;
   height: 100%;
 }
-/* line 169, ../sass/_core.scss */
+/* line 178, ../sass/_core.scss */
 footer a {
   display: block;
   height: 100%;
 }
-/* line 174, ../sass/_core.scss */
+/* line 183, ../sass/_core.scss */
 footer span {
   display: none;
 }
-/* line 178, ../sass/_core.scss */
+/* line 187, ../sass/_core.scss */
 footer #git {
   background-image: url("../images/git.svg");
 }
-/* line 181, ../sass/_core.scss */
+/* line 190, ../sass/_core.scss */
 footer #git:hover {
   background-color: #60B044;
 }
-/* line 186, ../sass/_core.scss */
+/* line 195, ../sass/_core.scss */
 footer #dribbble {
   background-image: url("../images/dribbble.svg");
 }
-/* line 189, ../sass/_core.scss */
+/* line 198, ../sass/_core.scss */
 footer #dribbble:hover {
   background-color: #EA4C89;
 }
-/* line 194, ../sass/_core.scss */
+/* line 203, ../sass/_core.scss */
 footer #linkedin {
   background-image: url("../images/linkedin.svg");
 }
-/* line 197, ../sass/_core.scss */
+/* line 206, ../sass/_core.scss */
 footer #linkedin:hover {
   background-color: #069;
 }
 
 @media screen and (max-width: 568px) {
-  /* line 204, ../sass/_core.scss */
-  #name {
-    width: auto !important;
+  /* line 213, ../sass/_core.scss */
+  html, body {
+    font-size: .875em;
   }
-  /* line 207, ../sass/_core.scss */
+
+  /* line 217, ../sass/_core.scss */
+  #name {
+    width: 200px !important;
+  }
+  /* line 220, ../sass/_core.scss */
   #name .smaller {
     display: none;
   }
 
-  /* line 212, ../sass/_core.scss */
+  /* line 225, ../sass/_core.scss */
   nav {
     width: 50px;
     height: 50px;
+    background: url("../images/menu.svg") no-repeat bottom center;
   }
-  /* line 215, ../sass/_core.scss */
+  /* line 229, ../sass/_core.scss */
   nav ul {
+    -webkit-transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
+    -moz-transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
+    transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
+    width: auto;
+    height: 9em;
+    -webkit-transform: translate3d(0, -9em, 0);
+    -moz-transform: translate3d(0, -9em, 0);
+    -ms-transform: translate3d(0, -9em, 0);
+    -o-transform: translate3d(0, -9em, 0);
+    transform: translate3d(0, -9em, 0);
     position: absolute;
-    top: 50px;
+    top: 0px;
     right: 0px;
     left: 0px;
-    z-index: 2;
-    background-color: none;
-    display: none;
-    height: auto;
+    font-size: 1rem !important;
+    text-align: center;
+    -webkit-filter: blur(5px);
+    opacity: 0;
   }
-  /* line 222, ../sass/_core.scss */
+  /* line 240, ../sass/_core.scss */
   nav li {
-    background: rgba(45, 50, 68, 0.75);
-    border-bottom: 2px solid #f0f0f0 !important;
+    background-color: rgba(45, 50, 68, 0.95);
+    line-height: 3em;
     float: none;
     width: 100%;
   }
-  /* line 228, ../sass/_core.scss */
-  nav li:last-child {
-    border-bottom: none;
+  /* line 246, ../sass/_core.scss */
+  nav li a {
+    color: #fff !important;
   }
-  /* line 234, ../sass/_core.scss */
-  nav.open ul {
-    display: block;
+  /* line 250, ../sass/_core.scss */
+  nav li div {
+    top: auto;
+    bottom: 0;
+    background-color: #191b25;
+    height: 2px;
+  }
+  /* line 257, ../sass/_core.scss */
+  nav li:last-child {
+    display: none;
+  }
+
+  /* line 263, ../sass/_core.scss */
+  #marquee {
+    height: 300px;
+    padding: 0 12.5px;
+  }
+  /* line 267, ../sass/_core.scss */
+  #marquee.fixed + #wrapper {
+    top: 300px;
+  }
+
+  /* line 272, ../sass/_core.scss */
+  .open nav ul {
+    -webkit-transform: translate3d(0, 50px, 0);
+    -moz-transform: translate3d(0, 50px, 0);
+    -ms-transform: translate3d(0, 50px, 0);
+    -o-transform: translate3d(0, 50px, 0);
+    transform: translate3d(0, 50px, 0);
+    -webkit-filter: blur(0);
+    opacity: 1;
   }
 }
 /* line 3, ../sass/_home.scss */
@@ -680,13 +748,27 @@ footer #linkedin:hover {
   }
 }
 @media screen and (max-width: 568px) {
-  /* line 176, ../sass/_home.scss */
+  /* line 177, ../sass/_home.scss */
+  .home #marquee .fake_button {
+    position: absolute;
+    bottom: 20px;
+    margin: 0;
+  }
+  /* line 182, ../sass/_home.scss */
+  .home #marquee .fake_button:first-of-type {
+    left: 12.5px;
+  }
+  /* line 186, ../sass/_home.scss */
+  .home #marquee .fake_button:last-of-type {
+    right: 12.5px;
+  }
+  /* line 192, ../sass/_home.scss */
   .home #work_grid li {
     width: 50%;
   }
 }
 @media screen and (max-width: 360px) {
-  /* line 182, ../sass/_home.scss */
+  /* line 199, ../sass/_home.scss */
   .home #work_grid li {
     width: 100%;
   }
